--- a/app/globals.css
+++ b/app/globals.css
@@ -231,7 +231,7 @@ body {
 }
 
 /* ========================================== CLERK STYLES */
-.cl-logoImage {
+/* .cl-logoImage {
   height: 38px;
 }
 
@@ -251,26 +251,4 @@ body {
 .cl-formButtonPrimary:focus,
 .cl-formButtonPrimary:active {
   background-color: #705CF7
-}
-
-/* ========================================== REACT-DATEPICKER STYLES */
-.datePicker {
-  width: 100%;
-}
-
-.react-datepicker__input-container input {
-  background-color: transparent;
-  width: 100%;
-  outline: none;
-  margin-left: 16px;
-}
-
-.react-datepicker__day--selected {
-  background-color: #624cf5 !important;
-  color: #ffffff !important;
-  border-radius: 4px;
-}
-
-.react-datepicker__time-list-item--selected {
-  background-color: #624cf5 !important;
-}
+} */
